--- a/css/main.css
+++ b/css/main.css
@@ -86,6 +86,12 @@ p{
     color:#5a3a68;
 }
 
+.edbase-sub-head{
+    font-family: 'Dancing Script', cursive;
+    font-size: 2.3rem;
+    color:#fff;
+}
+
 .logo-size{
     width: 128px;
 }
